--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,8 +1,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 16px;
   overflow-x: hidden;
@@ -34,7 +33,13 @@ ul {
   list-style: none;
 }
 
-.btn, .btn-secondary, .btn-clear {
+.img-fluid {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.btn, .btn-secondary, .btn-flat, .btn-clear {
   border: none;
   border-radius: 20px;
   overflow: hidden;
@@ -46,41 +51,52 @@ ul {
   padding: .5rem 1rem;
   margin: 0;
   cursor: pointer;
-  -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
 
-.btn p, .btn-secondary p, .btn-clear p,
+.btn p, .btn-secondary p, .btn-flat p, .btn-clear p,
 .btn h1,
 .btn-secondary h1,
+.btn-flat h1,
 .btn-clear h1,
 .btn h2,
 .btn-secondary h2,
+.btn-flat h2,
 .btn-clear h2,
 .btn h3,
 .btn-secondary h3,
+.btn-flat h3,
 .btn-clear h3,
 .btn h4,
 .btn-secondary h4,
+.btn-flat h4,
 .btn-clear h4,
 .btn h5,
 .btn-secondary h5,
+.btn-flat h5,
 .btn-clear h5,
 .btn h6,
 .btn-secondary h6,
+.btn-flat h6,
 .btn-clear h6 {
   margin-bottom: 0;
 }
 
-.btn:hover, .btn-secondary:hover, .btn-clear:hover, .btn:active, .btn-secondary:active, .btn-clear:active, .btn:focus, .btn-secondary:focus, .btn-clear:focus {
+.btn:hover, .btn-secondary:hover, .btn-flat:hover, .btn-clear:hover, .btn:active, .btn-secondary:active, .btn-flat:active, .btn-clear:active, .btn:focus, .btn-secondary:focus, .btn-flat:focus, .btn-clear:focus {
   background-color: #02BAAE;
 }
 
-.btn-secondary {
+.btn-flat {
+  border-radius: 0;
+  width: 50%;
+  padding: 1rem;
+}
+
+.btn-secondary, .btn-flat {
   background-color: #E87800;
 }
 
-.btn-secondary:hover, .btn-secondary:active, .btn-secondary:focus {
+.btn-secondary:hover, .btn-flat:hover, .btn-secondary:active, .btn-flat:active, .btn-secondary:focus, .btn-flat:focus {
   background-color: #BD5E00;
 }
 
@@ -135,21 +151,11 @@ ul {
   border: 1px solid #E87800;
   padding: 1.5rem;
   margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
   background-color: rgba(255, 255, 255, 0.1);
 }
 
@@ -185,21 +191,11 @@ ul {
 }
 
 .form-group {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
 
 .form-item {
@@ -215,7 +211,6 @@ ul {
   color: #008F8A;
   font-size: 1.2rem;
   font-weight: 500;
-  -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
 
@@ -239,29 +234,15 @@ ul {
   border-radius: 50%;
   border: 6px solid #fff;
   border-color: #008F8A transparent #008F8A transparent;
-  -webkit-animation: loading-ring 1.2s ease-in-out infinite;
-          animation: loading-ring 1.2s ease-in-out infinite;
-}
-
-@-webkit-keyframes loading-ring {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
+  animation: loading-ring 1.2s ease-in-out infinite;
 }
 
 @keyframes loading-ring {
   0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
@@ -276,135 +257,92 @@ ul {
   background-color: #c43511;
   border-width: 2px;
   border-color: white;
-  -webkit-animation: fade-in .5s ease-in-out;
-          animation: fade-in .5s ease-in-out;
+  animation: fade-in .5s ease-in-out;
   max-width: 80%;
-}
-
-@-webkit-keyframes fade-in {
-  0% {
-    opacity: 0;
-    -webkit-transform: scale(0.5);
-            transform: scale(0.5);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: scale(1);
-            transform: scale(1);
-  }
 }
 
 @keyframes fade-in {
   0% {
     opacity: 0;
-    -webkit-transform: scale(0.5);
-            transform: scale(0.5);
+    transform: scale(0.5);
   }
   100% {
     opacity: 1;
-    -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
   }
 }
 
 .nav-container {
   position: relative;
   background-color: #35495e;
-  -webkit-box-shadow: 0 5px 3px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 5px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 5px 3px rgba(0, 0, 0, 0.1);
   z-index: 1000;
 }
 
 .nav-container .nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
   padding: .5rem 0;
 }
 
+.nav-container .nav__nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-container .nav__nav a {
+  font-weight: 600;
+  font-size: 1.2rem;
+  padding: .5rem;
+  color: white;
+  position: relative;
+  overflow: hidden;
+  transition: all .2s ease-in-out;
+}
+
+.nav-container .nav__nav a::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-bottom: 2px solid #E87800;
+  transform: translate(-100%, 0);
+  transition: all .2s ease-in-out;
+}
+
+.nav-container .nav__nav a:hover, .nav-container .nav__nav a:active {
+  color: #E87800;
+}
+
+.nav-container .nav__nav a:hover::after, .nav-container .nav__nav a:active::after {
+  transform: translate(0%, 0);
+}
+
 .nav-container .nav__logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
 .nav-container .nav__logo .fa-film {
   font-size: 2rem;
   color: #008f8a;
-  -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
 
 .nav-container .nav__logo .fa-film:hover, .nav-container .nav__logo .fa-film:active {
-  -webkit-transform: rotate(360deg) scale(1.5);
-          transform: rotate(360deg) scale(1.5);
+  transform: rotate(360deg) scale(1.5);
   color: #02BAAE;
 }
 
-.nav-container .nav__search {
-  width: 40vw;
-}
-
-.nav-container .nav__search .form-group {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-
-.nav-container .nav__search .form-group .form-item {
-  display: block;
-  width: 100%;
-  max-width: unset;
-}
-
-.nav-container .nav__search .btn, .nav-container .nav__search .btn-secondary, .nav-container .nav__search .btn-clear {
-  position: absolute;
-  right: 0;
-  margin: 0 .5rem;
-  padding: .5rem .6rem;
-  border-radius: 50%;
-  background-color: transparent;
-  color: #008F8A;
-  -webkit-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
-}
-
-.nav-container .nav__search .btn:hover, .nav-container .nav__search .btn-secondary:hover, .nav-container .nav__search .btn-clear:hover, .nav-container .nav__search .btn:active, .nav-container .nav__search .btn-secondary:active, .nav-container .nav__search .btn-clear:active {
-  -webkit-transform: scale(1.3);
-          transform: scale(1.3);
-  -webkit-filter: drop-shadow(0 0 2px #008F8A);
-          filter: drop-shadow(0 0 2px #008F8A);
-  color: white;
-}
-
-.nav-container .nav__search .btn i, .nav-container .nav__search .btn-secondary i, .nav-container .nav__search .btn-clear i {
-  color: inherit;
-}
-
 .nav-container .nav__user {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
 .nav-container .nav__auth {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 .nav-container .nav a {
@@ -413,5 +351,168 @@ ul {
 
 .nav-container .nav h3 {
   margin: 0;
+}
+
+.search__box {
+  margin: 0 auto;
+  width: 40vw;
+}
+
+.search__box .form-group {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+}
+
+.search__box .form-group .form-item {
+  display: block;
+  width: 100%;
+  max-width: unset;
+}
+
+.search__box .form-group .btn, .search__box .form-group .btn-secondary, .search__box .form-group .btn-flat, .search__box .form-group .btn-clear {
+  position: absolute;
+  right: 0;
+  margin: 0 .5rem;
+  padding: .5rem .6rem;
+  border-radius: 50%;
+  background-color: transparent;
+  color: #008F8A;
+  transition: all .2s ease-in-out;
+}
+
+.search__box .form-group .btn:hover, .search__box .form-group .btn-secondary:hover, .search__box .form-group .btn-flat:hover, .search__box .form-group .btn-clear:hover, .search__box .form-group .btn:active, .search__box .form-group .btn-secondary:active, .search__box .form-group .btn-flat:active, .search__box .form-group .btn-clear:active {
+  transform: scale(1.3);
+  filter: drop-shadow(0 0 2px #008F8A);
+  color: white;
+}
+
+.search__box .form-group .btn i, .search__box .form-group .btn-secondary i, .search__box .form-group .btn-flat i, .search__box .form-group .btn-clear i {
+  color: inherit;
+}
+
+.search__res {
+  padding: 2rem 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(340px, 1fr));
+  gap: 1rem;
+}
+
+.search__res .movie {
+  position: relative;
+  transform: scale(1, 1);
+  transition: all .2s ease-out;
+  border-radius: 20px;
+  overflow: hidden;
+  border: 1px solid rgba(232, 120, 0, 0);
+}
+
+.search__res .movie:hover, .search__res .movie:active {
+  transform: scale(1.1, 1.1);
+  z-index: 5;
+  border: 1px solid #e87800;
+}
+
+@media (min-width: 576px) {
+  .search__res .movie:hover, .search__res .movie:active {
+    transform: scale(1.3, 1.3);
+  }
+}
+
+.search__res .movie:hover .title, .search__res .movie:active .title {
+  background-color: rgba(0, 0, 0, 0.75);
+  color: rgba(0, 0, 0, 0);
+}
+
+.search__res .movie:hover .poster-container, .search__res .movie:active .poster-container {
+  border-radius: 0px;
+  max-height: unset !important;
+}
+
+.search__res .movie .poster-container {
+  overflow: hidden;
+  border-radius: 20px;
+}
+
+@media (min-width: 576px) {
+  .search__res .movie .poster-container {
+    max-height: 300px;
+  }
+}
+
+@media (min-width: 768px) {
+  .search__res .movie .poster-container {
+    max-height: 400px;
+  }
+}
+
+.search__res .movie .poster-container img {
+  min-width: 100%;
+}
+
+.search__res .movie .title {
+  text-align: center;
+  padding: 1rem;
+  margin: 0;
+  z-index: 2000;
+}
+
+.search__res .movie .title-again {
+  margin: 0;
+  padding: 0 1rem;
+  text-align: center;
+}
+
+.search__res .movie .details-container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.search__res .movie .details-container .details {
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0);
+  padding-top: 1rem;
+  opacity: 0;
+  transform: translate(0, 110%);
+  transition: all .2s ease-out;
+  display: grid;
+  grid-template-rows: min-content auto 1.5rem 1.5rem auto;
+}
+
+.search__res .movie .details-container .details p, .search__res .movie .details-container .details small {
+  pointer-events: none;
+}
+
+.search__res .movie .details-container .details small {
+  display: block;
+  font-size: 11px;
+  color: #e9e9e9;
+  padding: 0 1rem;
+}
+
+.search__res .movie .details-container .details p {
+  text-align: justify;
+  padding: 1rem;
+  overflow: hidden;
+  font-size: 12px;
+  height: 80%;
+}
+
+.search__res .movie .details-container .details .buttons {
+  align-self: flex-end;
+  padding-bottom: 1rem;
+}
+
+.search__res .movie .details-container:hover .details, .search__res .movie .details-container:active .details {
+  opacity: 1;
+  transform: translate(0, 0%);
+  background-color: rgba(0, 0, 0, 0.75);
 }
 /*# sourceMappingURL=main.css.map */
