--- a/src/assets/sass/_classes.scss
+++ b/src/assets/sass/_classes.scss
@@ -23,6 +23,14 @@
     &:hover, &:active, &:focus {
         background-color: $primary-light;
     }
+
+    &-flat {
+        @extend .btn-secondary;
+        
+        border-radius: 0;
+        width: 50%;
+        padding: 1rem
+    }
 }
 
 .btn-secondary {
