--- a/src/assets/sass/_navbar.scss
+++ b/src/assets/sass/_navbar.scss
@@ -10,6 +10,42 @@
         justify-content: space-between;
         align-items: center;
         padding: .5rem 0;
+
+        &__nav {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            
+            a {
+                font-weight: 600;
+                font-size: 1.2rem;
+                padding: .5rem;
+                color: white;
+                position: relative;
+                overflow: hidden;
+                transition: all .2s ease-in-out;
+
+                &::after {
+                    content: '';
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    right: 0;
+                    border-bottom: 2px solid $secondary-color;
+                    transform: translate(-100%, 0);
+                    transition: all .2s ease-in-out;
+                }
+
+                &:hover, &:active {
+                    color: $secondary-color;
+
+                    &::after {
+                        transform: translate(0%, 0);
+
+                    }
+                }
+            }
+        }
     
         &__logo {
             display: flex;
@@ -25,43 +61,6 @@
                   color: $primary-light;
                 }
               }
-        }
-    
-        &__search {
-            width: 40vw;
-    
-            .form-group {
-                position: relative;
-                display: flex;
-                flex-direction: row;
-    
-                .form-item {
-                    display: block;
-                    width: 100%;
-                    max-width: unset;
-                }
-            }
-    
-            .btn {
-                position: absolute;
-                right: 0;
-                margin: 0 .5rem;
-                padding: .5rem .6rem;
-                border-radius: 50%;
-                background-color: transparent;
-                color: $primary-color;
-                transition: all .2s ease-in-out;
-
-                &:hover, &:active {
-                    transform: scale(1.3);
-                    filter: drop-shadow(0 0 2px $primary-color);
-                    color: white;
-                }
-
-                i {
-                    color: inherit;
-                }
-            }
         }
     
         &__user {
