--- a/src/assets/sass/_search.scss
+++ b/src/assets/sass/_search.scss
@@ -44,31 +44,33 @@
         grid-template-rows: repeat( auto-fit, minmax(340px, 1fr) );
         gap: 1rem;
 
+        .load-more {
+            grid-column: 1/ -1;
+            display: flex;
+            justify-content: center;
+
+            .btn-secondary {
+                padding: 1rem 5rem;
+                font-weight: 600;
+            }
+        }
+
         .movie {
             position: relative;
             transform: scale(1, 1);
             transition: all .2s ease-out;
             border-radius: 20px;
             overflow: hidden;
-            border: 1px solid rgba($secondary-color, 0);
 
             &:hover, &:active {
                 transform: scale(1.1, 1.1);
-
-                @media (min-width: 576px) {
-                    transform: scale(1.3, 1.3);
-                }
-
                 z-index: 5;
-                border: 1px solid rgba($secondary-color, 1);
 
                 .title {
-                    background-color: rgba($color: #000000, $alpha: .75);
-                    color: rgba($color: #000000, $alpha: 0);
+                    display: none;
                 }
 
                 .poster-container {
-                    border-radius: 0px;
                     max-height: unset !important;
                 }
             }
@@ -76,17 +78,35 @@
             .poster-container {
                 overflow: hidden;
                 border-radius: 20px;
+                height: 80%;
 
                 @media (min-width: 576px) {
-                    max-height: 300px;
+                    max-height: 350px;
                 }
 
                 @media (min-width: 768px) {
+                    max-height: 500px;
+                }
+
+                @media (min-width: 992px) {
                     max-height: 400px;
                 }
 
                 img {
                     min-width: 100%;
+                }
+
+                .no-poster {
+                    text-align: center;
+                    display: flex;
+                    align-items: center;
+                    align-content: center;
+                    justify-content: center;
+                    height: 100%;
+
+                    i {
+                        font-size: 15rem;
+                    }
                 }
             }
 
@@ -99,6 +119,7 @@
 
             .title-again {
                 margin: 0;
+                margin-top: .5rem;
                 padding: 0 1rem;
                 text-align: center;
 
@@ -107,22 +128,26 @@
             .details-container {
                 position: absolute;
                 top: 0;
-                bottom: 0;
+                bottom: 20%;
                 left: 0;
                 right: 0;
+                height: 80%;
                 z-index: 10;
                 cursor: pointer;
-                overflow: hidden;
 
                 .details {
                     height: 100%;
                     background-color: rgba($color: #000000, $alpha: 0);
-                    padding-top: 1rem;
                     opacity: 0;
                     transform: translate(0, 110%);
                     transition: all .2s ease-out;
                     display: grid;
-                    grid-template-rows: min-content auto 1.5rem 1.5rem auto;
+                    grid-template-rows: min-content min-content min-content auto min-content;
+                    gap: .5rem;
+                    border: 2px solid rgba($secondary-color, 1);
+                    border-radius: 20px;
+                    overflow: hidden;
+
 
                     p, small {
                         pointer-events: none;
@@ -138,7 +163,7 @@
 
                     p {
                         text-align: justify;
-                        padding: 1rem;
+                        padding: 0 1rem;
                         overflow: hidden;
                         font-size: 12px;
                         height: 80%;
@@ -146,7 +171,6 @@
 
                     .buttons {
                         align-self: flex-end;
-                        padding-bottom: 1rem;
                     }
                 }
 
