--- a/src/assets/sass/_site.scss
+++ b/src/assets/sass/_site.scss
@@ -6,6 +6,7 @@ html, body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 16px;
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 body, * {
@@ -40,8 +41,11 @@ ul {
     list-style: none;
 }
 
-.img-fluid {
-    display: block;
-    max-width: 100%;
-    height: auto;
+i {
+    transform: scale(1, 1);
+    transition: all .3s ease-in-out;
+
+    &:hover, &:active {
+        transform: scale(1.1, 1.1);
+    }
 }
