--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -3,6 +3,9 @@ $primary-dark: #004442;
 $primary-light: #02BAAE;
 $secondary-color: #E87800;
 $secondary-dark: #BD5E00;
-$red: rgb(196, 53, 17);
+$red: rgb(255, 59, 48);
+$orange: rgb(255, 149, 0);
+$mint: rgb(0, 199, 190);
+$green: rgb(52, 199, 89);
 
 $site-bg: #35495e;
