--- a/src/assets/sass/_mixins.scss
+++ b/src/assets/sass/_mixins.scss
@@ -8,3 +8,18 @@
     @include roundBorders;
     border: 1px solid $color;
 }
+
+// @mixin scrollbar () {
+//     ::-webkit-scrollbar {
+//         width: 2rem;
+//     }
+
+//     ::-webkit-scrollbar-track {
+//         box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+//     }
+
+//     ::-webkit-scrollbar-thumb {
+//         background-color: rgb(196, 40, 40);
+//         outline: 1px solid rgb(33, 91, 148);
+//     }
+// }
