--- a/src/assets/sass/_movie-details.scss
+++ b/src/assets/sass/_movie-details.scss
@@ -47,7 +47,7 @@
             height: 100%;
             overflow: hidden;
             display: grid;
-            grid-template-rows: repeat(3, min-content) auto min-content;
+            grid-template-rows: repeat(3, min-content) auto 170px;
 
             .links {
                 display: flex;
@@ -117,6 +117,14 @@
                 border-top: 2px solid $secondary-color;
                 border-bottom: 2px solid $secondary-color;
                 background-color: rgba($color: #000000, $alpha: .3);
+                overflow: scroll;
+                overflow-x: hidden;
+                -ms-overflow-style: none;
+                scrollbar-width: none;
+                
+                ::-webkit-scrollbar {
+                    display: none;
+                }
 
                 @media (min-width: 768px) {
                     padding: 1rem 3rem;
@@ -126,7 +134,7 @@
                 p {
                     font-size: 20px;
                     font-weight: 500;
-                    overflow: scroll;
+
                 }
             }
 
