--- a/src/assets/sass/_search-results.scss
+++ b/src/assets/sass/_search-results.scss
@@ -22,40 +22,21 @@
             transition: all .2s ease-out;
             border-radius: 20px;
             overflow: hidden;
-            height: 80%;
 
             .poster-container {
                 overflow: hidden;
                 border-radius: 20px;
-                // height: 80%;
+                min-height: 110vw;
+                min-width: 100%;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
+                display: flex;
+                justify-content: center;
+                align-items: center;
 
-                // @media (min-width: 576px) {
-                //     max-height: 350px;
-                // }
-
-                // @media (min-width: 768px) {
-                //     max-height: 500px;
-                // }
-
-                // @media (min-width: 992px) {
-                //     max-height: 400px;
-                // }
-
-                img {
-                    min-width: 100%;
-                }
-
-                .no-poster {
-                    text-align: center;
-                    display: flex;
-                    align-items: center;
-                    align-content: center;
-                    justify-content: center;
-                    height: 100%;
-
-                    i {
-                        font-size: 15rem;
-                    }
+                @media (min-width: 556px) {
+                    min-height: 400px;
                 }
             }
 
@@ -78,25 +59,24 @@
 
                 .details {
                     height: 100%;
-                    background-color: rgba($color: #000000, $alpha: 0);
-                    opacity: 0;
-                    transition: all .2s ease-out;
                     display: grid;
                     grid-template-rows: min-content min-content min-content auto min-content;
                     gap: .5rem;
-                    border: 2px solid rgba($secondary-color, 1);
+                    border: 1px solid rgba($secondary-color, 1);
                     border-radius: 20px;
                     overflow: hidden;
+                    background-color: rgba($color: #000000, $alpha: 0);
+                    opacity: 0;
+                    transition: all .2s ease-out;
 
-
-                    p, small {
-                        pointer-events: none;
-
+                    &:hover, &:active {
+                        opacity: 1;
+                        background-color: rgba($color: #000000, $alpha: .75);
                     }
 
                     small {
                         display: block;
-                        font-size: 11px;
+                        font-size: 12px;
                         color: rgb(233, 233, 233);
                         padding: 0 1rem;
                     }
@@ -104,21 +84,24 @@
                     p {
                         text-align: justify;
                         padding: 0 1rem;
-                        overflow: hidden;
-                        font-size: 12px;
-                        height: 80%;
+                        overflow: scroll;
+                        overflow-x: hidden;
+                        font-size: 14px;
+                        -ms-overflow-style: none;
+                        scrollbar-width: none;
+
+                        ::-webkit-scrollbar {
+                            display: none;
+                        }
                     }
 
                     .buttons {
                         align-self: flex-end;
-                    }
-                }
 
-                &:hover, &:active {
-
-                    .details {
-                        opacity: 1;
-                        background-color: rgba($color: #000000, $alpha: .75);
+                        .btn-flat {
+                            padding: .5rem 1rem;
+                            font-weight: 600;
+                        }
                     }
                 }
             }
